RESOLVED FIXED137882
REGRESSION(r174823): Several tests fail due to canplaythrough firing before tracks are available
https://bugs.webkit.org/show_bug.cgi?id=137882
Summary REGRESSION(r174823): Several tests fail due to canplaythrough firing before t...
Jer Noble
Reported 2014-10-20 08:40:36 PDT
https://build.webkit.org/results/Apple%20Mavericks%20Debug%20WK2%20(Tests)/r174866%20(7482)/results.html http/tests/media/hls/video-controls-live-stream.html http/tests/media/track-in-band-hls-metadata.html Both failing due to 'canplaythrough' firing earlier than expected (before the videos have tracks).
Attachments
Patch (8.37 KB, patch)
2014-11-04 18:03 PST, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2014-10-20 08:46:29 PDT
Jer Noble
Comment 2 2014-10-20 08:47:26 PDT
Above commit was just TestExpectations changes.
Alexey Proskuryakov
Comment 3 2014-10-27 10:09:59 PDT
media/track/audio-track.html appears to be flaky on Yosemite for the same reason. Marked it as flaky in https://trac.webkit.org/r175218 (on all OS X versions, because the change was not Yosemite specific).
Radar WebKit Bug Importer
Comment 4 2014-10-27 10:10:57 PDT
Jer Noble
Comment 5 2014-11-04 17:57:32 PST
(In reply to comment #3) > media/track/audio-track.html appears to be flaky on Yosemite for the same > reason. > > Marked it as flaky in https://trac.webkit.org/r175218 (on all OS X versions, > because the change was not Yosemite specific). Turns out, it's flakey for a different reason. We're queueing a timer to fire the "addTrack" event, but we're sending the "canplaythrough" event immediately when the KVO fires. This means that they can come slightly out-of-order, but this was always possible, and likely did not have anything to do with the other change.
Jer Noble
Comment 6 2014-11-04 18:03:59 PST
Alexey Proskuryakov
Comment 7 2014-11-04 19:20:39 PST
Comment on attachment 240992 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=240992&action=review Nice! > LayoutTests/platform/mac/TestExpectations:1503 > webkit.org/b/137882 media/track/audio-track.html [ Pass Failure ] Could you please change this to bug 138394?
Jer Noble
Comment 8 2014-11-10 12:44:14 PST
Note You need to log in before you can comment on or make changes to this bug.